[gd_scene load_steps=14 format=3 uid="uid://btobiu2ims31j"]

[ext_resource type="Script" path="res://src/world/World.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cx2aa6o5apcrm" path="res://src/misc/moving_score_label.tscn" id="2_8ldxm"]
[ext_resource type="PackedScene" uid="uid://ddkou35812lc7" path="res://src/world/UI/UI.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://dqks7hjmtwpxi" path="res://src/world/UI/pause menu.tscn" id="5_3q4hc"]
[ext_resource type="PackedScene" uid="uid://c510g1is0el7b" path="res://src/characters/Player.tscn" id="6"]
[ext_resource type="Shader" path="res://assets/shaders/gradient_edges.gdshader" id="6_kocl3"]
[ext_resource type="Theme" uid="uid://xdmr7ygweveg" path="res://assets/ui theme/kenneyUI-green.tres" id="7_2mxah"]
[ext_resource type="Script" path="res://src/misc/Positioner/PositionManager.gd" id="8_fnq87"]
[ext_resource type="Script" path="res://src/misc/Positioner/CursorFollow.gd" id="9_7owud"]
[ext_resource type="Script" path="res://src/misc/Positioner/Smoother.gd" id="10_jxsch"]
[ext_resource type="Script" path="res://src/misc/Positioner/CameraShaker.gd" id="11_4qewy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f83gk"]
shader = ExtResource("6_kocl3")
shader_parameter/min_alpha = 0.235
shader_parameter/gradient_length_norm = 0.16
shader_parameter/gradient_length_pixels = 20.0
shader_parameter/use_norm_len = false
shader_parameter/rect_size = Vector2(453, 345)
shader_parameter/ignore_text = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fr573"]
bg_color = Color(1, 1, 1, 0.603922)

[node name="BasicWorld" type="Node2D" node_paths=PackedStringArray("score_marker_control")]
script = ExtResource("1")
moving_score_obj_scene = ExtResource("2_8ldxm")
score_marker_control = NodePath("CanvasLayer/GameUI/ScoreCounter")

[node name="Player" parent="." instance=ExtResource("6")]
position = Vector2(288, 112)
acceleration = 600.0
deceleration = 600.0

[node name="Enemies" type="Node" parent="."]

[node name="DeathSound" type="AudioStreamPlayer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("5_3q4hc")]
visible = false

[node name="GameUI" parent="CanvasLayer" instance=ExtResource("5")]

[node name="Scoreboard" type="Panel" parent="CanvasLayer"]
visible = false
material = SubResource("ShaderMaterial_f83gk")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -214.0
offset_top = -152.0
offset_right = 239.0
offset_bottom = 193.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fr573")
metadata/_edit_group_ = true

[node name="Labels" type="VBoxContainer" parent="CanvasLayer/Scoreboard"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.5
offset_top = 20.0
offset_right = 51.5
offset_bottom = 106.0
grow_horizontal = 2

[node name="Score" type="Label" parent="CanvasLayer/Scoreboard/Labels"]
layout_mode = 2
text = "<Value>"
horizontal_alignment = 1

[node name="HighScore" type="Label" parent="CanvasLayer/Scoreboard/Labels"]
layout_mode = 2
text = "High Score : <value>"
horizontal_alignment = 1

[node name="NewRecord" type="Label" parent="CanvasLayer/Scoreboard/Labels"]
layout_mode = 2
text = "New Record!!"
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="CanvasLayer/Scoreboard"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -53.5
offset_top = -132.0
offset_right = 55.5
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("7_2mxah")
theme_override_constants/separation = 15

[node name="Restart" type="Button" parent="CanvasLayer/Scoreboard/Buttons"]
layout_mode = 2
text = "Restart"

[node name="MainMenu" type="Button" parent="CanvasLayer/Scoreboard/Buttons"]
layout_mode = 2
text = "Main Menu"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)

[node name="PositionManager" type="Node" parent="Camera2D" node_paths=PackedStringArray("target", "_positioner_chain")]
script = ExtResource("8_fnq87")
target = NodePath("..")
_positioner_chain = [NodePath("CursorFollow"), NodePath("Smoother"), NodePath("Shaker")]

[node name="CursorFollow" type="Node" parent="Camera2D/PositionManager"]
script = ExtResource("9_7owud")

[node name="Smoother" type="Node" parent="Camera2D/PositionManager"]
script = ExtResource("10_jxsch")

[node name="Shaker" type="Node" parent="Camera2D/PositionManager"]
script = ExtResource("11_4qewy")
duration = 0.5
dist = 10.0

[connection signal="shot_fired" from="Player" to="Camera2D/PositionManager/Shaker" method="_on_player_shot_fired"]
[connection signal="pressed" from="CanvasLayer/Scoreboard/Buttons/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CanvasLayer/Scoreboard/Buttons/MainMenu" to="." method="_on_main_menu_pressed"]

[editable path="CanvasLayer/GameUI"]
